cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project( reconstruction_sift )
find_package( OpenCV REQUIRED )
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable( reconstruction_sift reconstruction_sift.cpp )
target_link_libraries( reconstruction_sift ${OpenCV_LIBS} )
target_link_libraries(reconstruction_sift ${PCL_LIBRARIES})
set(CMAKE_BUILD_TYPE "debug")
